# smr300l_gazebo_ros2control

./: .gitignore  NAV2_FIXES_SUMMARY.md  NEW_FEATURES.md  README.md  UI_IMPROVEMENTS.md  active_map_config.yaml  bashrc  devnotes  frames_2026-01-08_16.36.47.gv  frames_2026-01-09_10.35.09.gv  frames_2026-01-09_14.01.07.gv  frames_2026-01-20_10.37.35.gv  index2.html  install_web_ui_deps.sh  launch commands  nav2_launch_wrapper.sh  navigation_staged.launch.py  ui_improvements.patch  verify_nav2_config.sh  zones.yaml
config/: gaz_ros2_ctl_use_sim.yaml  gazebo_params.yaml  mapper_params_online_async.yaml  my_controllers.yaml  nav2_params.yaml  nav2_params.yaml.backup_20260116_113308  nav2_params.yaml.backup_20260116_113323  nav2_params_working.yaml  nav2_params_working.yaml.backup_20260116_113323  nav2_params_working.yaml.backup_20260116_113336  navigate_through_poses_simple.xml  robot.rviz  twist_mux.yaml
description/: gazebo_control.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
launch/: joystick.launch.py  launch_sim.launch.py  mode_switcher.launch.py  navigation.launch.py  navigation_bringup.launch.py  navigation_composable.launch.py  navigation_launch.py  navigation_staged.launch.py  online_async_launch.py  rsp.launch.py  safety_controller.launch.py  zone_nav_ui.launch.py
maps/: edited_map_20260116.pgm  edited_map_20260116.yaml  filters.pgm  filters.yaml  keepout_zones.yaml  new.pgm  new.yaml  newmap.pgm  newmap.yaml  newnew.pgm  newnew.yaml  smr_map.pgm  smr_map.yaml  smr_map_edited.pgm  speed_zones.yaml
src/map_editor/: package.xml  setup.py
src/map_editor/map_editor/: __init__.py  map_editor_server.py  map_stich.py
src/map_editor/map_editor/web/static/css/: map_editor.css
src/map_editor/map_editor/web/static/js/: map_editor.js
src/map_editor/map_editor/web/templates/: map_editor.html
src/next_ros2ws_core/: package.xml  setup.cfg  setup.py
src/next_ros2ws_core/next_ros2ws_core/: keepout_zone_publisher.py  map_manager.py  mode_switcher.py  safety_controller.py  scan_merger.py  stack_manager.py  zone_manager.py
src/next_ros2ws_interfaces/: CMakeLists.txt  package.xml
src/next_ros2ws_interfaces/action/: FollowPath.action  GoToZone.action  SwitchStackMode.action
src/next_ros2ws_interfaces/srv/: FollowPath.srv  GetActiveMap.srv  GetLayouts.srv  ReorderZones.srv  SaveLayout.srv  SavePath.srv  SetActiveMap.srv  SetControlMode.srv  SetSafetyOverride.srv  SetStackMode.srv  UpdateZoneParams.srv  UploadMap.srv
src/next_ros2ws_tools/: package.xml  setup.cfg  setup.py
src/next_ros2ws_tools/next_ros2ws_tools/: auto_reloc.py
src/next_ros2ws_web/: package.xml  setup.cfg  setup.py
src/next_ros2ws_web/next_ros2ws_web/: zone_web_ui.py
src/next_ros2ws_web/next_ros2ws_web/web/templates/: index.html  map_editor.html
src/zone_nav/: package.xml  setup.cfg  setup.py
src/zone_nav/zone_nav/: auto_reloc.py  keepout_zone_publisher.py  map_manager.py  mode_switcher.py  safety_controller.py  scan_merger.py  stack_manager.py  zone_manager.py  zone_web_ui.py
src/zone_nav/zone_nav/web/templates/: index.html  map_editor.html
src/zone_nav_interfaces/: CMakeLists.txt  package.xml
src/zone_nav_interfaces/srv/: SetEStop.srv  SetMaxSpeed.srv
